Update newsletter links

--- a/app/contact/index.html
+++ b/app/contact/index.html
@@ -37,11 +37,11 @@ layout: sectioned-page
           <p class="value max-w-[330px]">
             Get updates on our latest projects and research.
           </p>
-          {% include arrow-link.html label="Sign Up" href="#" target="_blank" reverse=true %}
+          {% include arrow-link.html label="Sign Up" href="https://ocb.to/lawvocado" target="_blank" reverse=true %}
         </div>
         <div class="label-value">
           <h3 class="label">GitHub</h3>
-          {% include arrow-link.html label="GitHub" href="#" target="_blank" reverse=true %}
+          {% include arrow-link.html label="GitHub" href=site.github_url target="_blank" reverse=true %}
         </div>
       </div>
     </div>
