--- a/app/events.html
+++ b/app/events.html
@@ -47,10 +47,11 @@ layout: sectioned-page
     <section class="container flex flex-col items-start gap-40">
       <h2 class="h2">Past</h2>
       <div class="flex flex-col items-start w-full">
-        {% for event in site.events %}
-          <div class="body-text w-full py-32 border-t-1 border-black first-of-type:border-t-0 last-of-type:border-b-1 flex grid grid-cols-12 gap-24 relative">
+        {% assign events = site.events | sort: 'date' | reverse %}
+        {% for event in events %}
+          <div class="body-text w-full py-32 border-t-1 border-black first-of-type:border-t-0 last-of-type:border-b-1 flex grid grid-cols-12 gap-24 relative items-center">
             <span class="label col-span-3">{{ event.date | date: "%m/%d/%y" }}</span>
-            <span class="col-span-6">{{event.title}}</span>
+            <span class="col-span-6">{{event.title}} - {{event.short_description}}</span>
             <span class="col-span-3 flex justify-end">
               {% include arrow-link.html label="More Info" href=event.url target=target card_link="true" %}
             </span>
