--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@ sharing-card-type: summary_large_image
         {% include arrow-link.html label="Twitter" href="https://twitter.com" target="_blank" %}
       </li>
       <li>
-        {% include arrow-link.html label="Newsletter" href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f" target="_blank" %}
+        {% include arrow-link.html label="Newsletter" href="https://ocb.to/lawvocado" target="_blank" %}
       </li>
     </ul>
   </div>
@@ -90,11 +90,11 @@ sharing-card-type: summary_large_image
             <p class="value max-w-[330px]">
               Get updates on our latest projects and research.
             </p>
-            {% include arrow-link.html label="Sign Up" href="#" target="_blank" reverse=true %}
+            {% include arrow-link.html label="Sign Up" href="https://ocb.to/lawvocado" target="_blank" reverse=true %}
           </div>
           <div class="label-value">
             <h3 class="label">GitHub</h3>
-            {% include arrow-link.html label="GitHub" href="#" target="_blank" reverse=true %}
+            {% include arrow-link.html label="GitHub" href=site.github_url target="_blank" reverse=true %}
           </div>
         </div>
       </div>
