--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,26 @@
 ---
 layout: sectioned-page
 title: Library Innovation Lab at Harvard University
-title-tag-complete: The Library Innovation Lab at Harvard University
+title-tag-complete: The Library Innovation Lab at Harvard Law School
 description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. The Library Innovation Lab is growing knowledge and community by bringing library principles to technological frontiers."
 slug: home
 sharing-card-type: summary_large_image
 ---
 
-<div class="pt-[16vh] pb-[26vh] flex items-center justify-center text-[clamp(64px,12vw,150px)] leading-[100%] container">
+<div class="pt-50 pb-40 md:pt-[16vh] md:pb-[26vh] flex items-center justify-center text-[clamp(52px,10vw,150px)] leading-[100%] container">
   <h1>
-    <strong>Library Innovation Lab</strong> at <strong>Harvard University</strong>
+    <strong>Library Innovation Lab</strong> at <strong>Harvard Law School</strong>
   </h1>
 </div>
 
-<div class="bg-black text-white w-full pt-80 pb-120 continer text-center flex flex-col justify-center items-center gap-32">
-  <h2 class="font-mono uppercase tracking-8 text-green text-[24px] font-normal">Our Mission</h2>
-  <h3 class="text-[54px] leading-[61px] max-w-[1120px] tracking-2">To grow knowledge and community by bringing <strong>library principles to technological frontiers.</strong></h3>
+<div class="bg-black text-white w-full pt-32 pb-32 md:pt-80 md:pb-120 continer text-center flex flex-col justify-center items-center gap-20 md:gap-32">
+  <h2 class="font-mono uppercase tracking-8 text-green text-16 md:text-24 font-normal">Our Mission</h2>
+  <h3 class="text-28 md:text-54 leading-120 max-w-[1120px] tracking-2">To grow knowledge and community by bringing <strong>library principles to technological frontiers.</strong></h3>
 </div>
 
 <div class="bg-blue py-32">
-  <div class="container flex flex-col md:flex-row items-center md:justify-between gap-24">
-    <h2 class="text-[18px] tracking-8 uppercase font-medium">Follow our latest projects</h2>
+  <div class="container flex flex-col md:flex-row md:items-center md:justify-between gap-16 md:gap-24">
+    <h2 class="text-14 md:text-18 tracking-8 uppercase font-medium">Follow our latest projects</h2>
     <ul class="flex items-center gap-60 text-[24px] leading-[120%]">
       <li>
         {% include arrow-link.html label="Twitter" href="https://twitter.com" target="_blank" %}
@@ -32,7 +32,7 @@ sharing-card-type: summary_large_image
   </div>
 </div>
 
-<div class="flex flex-col gap-80 pb-220">
+<div class="flex flex-col gap-50 md:gap-80 pb-120 md:pb-220">
   {% include 
     project-card.html 
     background="bg-yellow" 
@@ -45,10 +45,10 @@ sharing-card-type: summary_large_image
     linkTwo="/projects/perma-cc"
     linkTwoLabel="Learn More"
   %}
-  <div class="container flex flex-col gap-100">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 pb-120 border-b-1 border-black">
+  <div class="container flex flex-col gap-50 md:gap-100">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 pb-50 md:pb-120 border-b-1 border-black">
       <h2 class="h2">Who We Are</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
+      <div class="md:col-span-2 body-text flex flex-col gap-28 md:gap-50 md:pt-24">
         <div class="flex flex-col gap-20 max-w-[650px]">
           <p>The Library Innovation Lab is a team working at the intersection of libraries, technology, and law.</p>
           <p>Our team combines librarians, technologists, lawyers, and more to build tools and conduct research to empower more people to access and build our shared knowledge and cultural heritage.</p>
@@ -56,7 +56,7 @@ sharing-card-type: summary_large_image
         {% include arrow-link.html label="Learn More About Who We Are" href="/about" %}
       </div>
     </div>
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 pb-120 border-b-1 border-black">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-32 md:gap-40 pb-50 md:pb-120 border-b-1 border-black">
       <h2 class="h2">Our Work</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
         <div class="flex flex-col gap-20 max-w-[650px]">
@@ -68,8 +68,8 @@ sharing-card-type: summary_large_image
     </div>
     <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
       <h2 class="h2">Contact Us</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24 flex flex-col md:grid md:grid-cols-2 gap-24 md:gap-32">
-        <div class="flex flex-col gap-50">
+      <div class="md:col-span-2 body-text flex flex-col pt-24 flex flex-col md:grid md:grid-cols-2 gap-40">
+        <div class="flex flex-col gap-40 md:gap-50">
           <div class="label-value">
             <h3 class="label">Email</h3>
             <a href="mailto:lil@law.harvard.edu" class="value interactive-link dark reverse">lil@law.harvard.edu</a>
@@ -84,7 +84,7 @@ sharing-card-type: summary_large_image
             {% include arrow-link.html label="Map" href="#" target="_blank" reverse=true %}
           </div>
         </div>
-        <div class="flex flex-col gap-32">
+        <div class="flex flex-col gap-40 md:gap-50">
           <div class="label-value">
             <h3 class="label">Newsletter</h3>
             <p class="value max-w-[330px]">
