--- a/app/about/index.html
+++ b/app/about/index.html
@@ -16,9 +16,9 @@ layout: sectioned-page
 <div class="flex flex-col items-start gap-40 md:gap-80">
 
   <section class="container">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
       <h2 class="h2">Who We Are</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-32 pt-20 max-w-[700px]">
+      <div class="md:col-span-2 body-text flex flex-col gap-32 md:pt-20 max-w-[700px]">
         <p>We are a team of librarians, technologists, lawyers, designers, and more, and we work out of the Harvard Law School Library.</p>
         <p>We believe that libraries play a fundamental role in humanity as open, privacy-respecting, and sustainable information spaces. We also believe technology holds great power to break down barriers to information creation, preservation, and use, but tools are never neutral: they must be thoughtfully developed to support human thriving.</p>
       </div>
