--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -14,7 +14,7 @@ layout: sectioned-page
   </div>
 </section>
 
-<div class="flex flex-col gap-80 pb-200">
+<div class="flex flex-col gap-50 md:gap-80 pb-80 md:pb-200">
   <section>
     <figure>
       <picture>
@@ -35,7 +35,7 @@ layout: sectioned-page
     </figure>
   </section>
 
-  <section class="container flex flex-col gap-40">
+  <section class="container flex flex-col gap-24 md:gap-40">
     <h2 class="h2">Background</h2>
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
@@ -148,7 +148,7 @@ layout: sectioned-page
     </div>
   </section>
   
-  <section class="container flex flex-col gap-40">
+  <section class="container flex flex-col gap-24 md:gap-40">
     <h2 class="h2">Staff Positions</h2>
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
@@ -187,7 +187,7 @@ layout: sectioned-page
     </div>
   </section>
 
-  <section class="container flex flex-col gap-40">
+  <section class="container flex flex-col gap-24 md:gap-40">
     <h2 class="h2">Research Positions</h2>
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
