--- a/app/projects.html
+++ b/app/projects.html
@@ -15,10 +15,10 @@ layout: sectioned-page
     </div>
   </section>
 
-  <section class="container pb-80">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+  <section class="container pb-40 md:pb-80">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
       <h2 class="h2">Active Projects</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
+      <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
         <p class="flex flex-col gap-20 max-w-[700px]">
           Projects are the heart of the Library Innovation Lab. We build things. Our projects attempt to make something — big or small — better, simpler, more transparent, or more fun.
         </p>
@@ -43,18 +43,18 @@ layout: sectioned-page
     {% endfor %}
   </section>
 
-  <section class="container pb-140 pt-120 flex flex-col gap-100">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+  <section class="container pt-40 pb-40 md:pb-140 md:pt-120 flex flex-col gap-50 md:gap-100">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
       <h2 class="h2">Research</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
+      <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
         <div class="flex flex-col gap-20 max-w-[700px]">
           <p>Research at LIL is structured around a variety of modes and outcomes, though it all ultimately serves our goal of fusing the library world with new technologies. We use our research to understand new - or new to us - communities and their extant work around a knowledge challenge; to tackle a particularly thorny and consequential technical problem; or to work with libraries to map the technical possibilities available to them for a particular part of their mission.</p>
           <p>Some of our research is explicitly tied to our ongoing tentpole projects, while other explorations may become larger projects down the line.</p>
         </div>
       </div>
     </div>
-    <div class="flex flex-col gap-40">
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 w-full border-b-1 border-black pb-32">
+    <div class="flex flex-col gap-24 md:gap-40">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 w-full border-b-1 border-black pb-40 md:pb-32">
         <h3 class="label">AI Explorations</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
@@ -67,7 +67,7 @@ layout: sectioned-page
           </div>
         </div>
       </div>
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 w-full border-b-1 border-black pb-32">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 w-full border-b-1 border-black pb-40 md:pb-32">
         <h3 class="label">Perma Tools</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
@@ -80,7 +80,7 @@ layout: sectioned-page
           </div>
         </div>
       </div>
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 w-full">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 w-full">
         <h3 class="label">Ongoing</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
@@ -95,11 +95,11 @@ layout: sectioned-page
     </div>
   </section>
 
-  <section class="bg-gray pt-80 pb-40">
+  <section class="bg-gray pt-24 md:pt-80 pb-40">
     <div class="container flex flex-col gap-40">
-      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
         <h2 class="h2">Past Projects</h2>
-        <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
+        <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
           <div class="flex flex-col gap-20 max-w-[700px]">
             <p>At the Library Innovation Lab we are also in pursuit of understanding innovation as a practice.</p>
             <p>While not exhaustive, these are projects we have worked on, tinkered with, and ultimately sunsetted for various reasons. Each one has taught us a lesson about a particular domain, or piece of software, or community. We share lessons learned from each to be seen as case studies or used as proofs of concept for folks interested in diving deeper.</p>
