--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@ sharing-card-type: summary_large_image
   </h1>
 </div>
 
-<div class="bg-black text-white w-full pt-32 pb-32 md:pt-80 md:pb-120 continer text-center flex flex-col justify-center items-center gap-20 md:gap-32">
+<div class="bg-black text-white w-full pt-32 pb-32 md:pt-120 md:pb-160 continer text-center flex flex-col justify-center items-center gap-20 md:gap-32">
   <h2 class="font-mono uppercase tracking-8 text-green text-16 md:text-24 font-normal">Our Mission</h2>
   <h3 class="text-28 md:text-54 leading-120 max-w-[1120px] tracking-2">To grow knowledge and community by bringing <strong>library principles to technological frontiers.</strong></h3>
 </div>
@@ -63,7 +63,7 @@ sharing-card-type: summary_large_image
           <p>We build and explore new technology through the lens of library principles. Perma.cc, a web preservation and citation tool; H2O, an open casebook authoring and reading platform; and The Caselaw Access Project, an open database of over 6 million court opinions free and open to the public.</p>
           <p>We also conduct research to further our understanding of certain technologies and create guides for others working in our field.</p>
         </div>
-        {% include arrow-link.html label="View All Projects" href="/about" %}
+        {% include arrow-link.html label="View All Projects" href="/projects" %}
       </div>
     </div>
     <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
