Mobile table fix

--- a/app/events.html
+++ b/app/events.html
@@ -49,10 +49,10 @@ layout: sectioned-page
       <div class="flex flex-col items-start w-full">
         {% assign events = site.events | sort: 'date' | reverse %}
         {% for event in events %}
-          <div class="body-text w-full py-32 border-t-1 border-black first-of-type:border-t-0 last-of-type:border-b-1 flex grid grid-cols-12 gap-24 relative items-center">
+          <div class="body-text w-full py-32 border-t-1 border-black first-of-type:border-t-0 last-of-type:border-b-1 flex flex-col  md:grid md:grid-cols-12 gap-8 md:gap-24 relative md:items-center">
             <span class="label col-span-3">{{ event.date | date: "%m/%d/%y" }}</span>
             <span class="col-span-6"><strong>{{event.title}}</strong> - {{event.short_description}}</span>
-            <span class="col-span-3 flex justify-end">
+            <span class="col-span-3 flex md:justify-end pt-20 md:pt-0">
               {% include arrow-link.html label="More Info" href=event.url target=target card_link="true" %}
             </span>
           </div>
