--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -20,6 +20,12 @@ layout: sectioned-page
               <li><a href="#ediba">Equity, diversity, inclusion, belonging and antiracism</a></li>
             </ul>
           </li>
+          <li>
+            <a href="#staff">Staff positions</a>
+            <ul>
+              <li><a href="#sem">Software Engineering Manager</a></li>
+            </ul>
+          </li>            
         </ul>
       </div>
     </div>
@@ -71,5 +77,21 @@ layout: sectioned-page
       </div>
     </div>
 
+    <div class="slice">
+      <h2 id="staff">Staff positions</h2>
+      <div class="slice-body">
+        <h3 id="sem">Software Engineering Manager</h3>
+        <p>
+          Our Software Engineering Manager leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.
+        </p>
+        <p>
+          <b>To apply:</b>
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2009078_5341">Application form</a>.
+          <em>
+            In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.
+          </em>
+        </p>
+      </div>
+    </div>
   </div>
 </section>
