updated work page, research pages, etc.

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -30,7 +30,7 @@ layout: sectioned-page
       <picture>
         <img src="{{ site.baseurl }}/assets/images/lewis-center-web.png"
             alt=""
-            class="img-full-width">
+            class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
       <figcaption class="inline-block container text-16 py-8">
         <strong>Credit: Bob O’Connor</strong> With a focus on fostering collaboration and community, the modernist building has been transformed into a 21st-century work environment.
