--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -20,7 +20,7 @@ layout: sectioned-page
       <picture>
         <img src="{{ site.baseurl }}/assets/images/lewis-center-careers.png"
             alt=""
-            class="img-full-width">
+            class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
       <figcaption class="inline-block container text-16 py-8">
         <strong>Credit: Bob O’Connor</strong> With a focus on fostering collaboration and community, the modernist building has been transformed into a 21st-century work environment.
