--- a/app/404.html
+++ b/app/404.html
@@ -8,9 +8,11 @@ permalink: /404.html
   <div class="page-hero simple relative z-[1]">
     <h1 class="page-hero__title">Oops!</h1>
     <h2 class="page-hero__subtitle flex flex-col gap-24 !max-w-[1080px]">
-      <p>We can’t seem to find the page you are looking for.</p>
-      <p>To report a broken link, please <a class="interactive-link dark reverse" href="mailto:lil@law.harvard.edu">contact us.</a></p>
+      We can’t seem to find the page you are looking for.
     </h2>
+    <p>
+      To report a broken link, please <a class="interactive-link dark reverse" href="mailto:lil@law.harvard.edu">contact us.</a>
+    </p>
   </div>
   <div class="w-full -translate-y-[150px] relative z-[0]">
     {% include 404.html %}
