--- a/app/about/index.html
+++ b/app/about/index.html
@@ -84,6 +84,7 @@ layout: sectioned-page
           {% endif %}
         {% endfor %}
       </div>
+    </div>
   </section>
 
   <section class="w-full bg-purple">
