Remove sizes attribute

--- a/app/events.html
+++ b/app/events.html
@@ -16,8 +16,7 @@ layout: sectioned-page
       <figure>
         <picture>
           <source media="(min-width: 600px)"
-                  srcset="{{ site.baseurl }}/assets/images/transform-justice-banner-large.jpg"
-                  sizes="100vw">
+                  srcset="{{ site.baseurl }}/assets/images/transform-justice-banner-large.jpg">
           <source srcset="{{ site.baseurl }}/assets/images/transform-justice-banner-small.jpg">
           <img src="{{ site.baseurl }}/assets/images/transform-justice-banner-small.jpg"
               alt=""
