A whole bunch of copy edits and a few reformatting tweaks

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -20,11 +20,11 @@ layout: sectioned-page
       <h2 class="h2">Who We Are</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-32 md:pt-20 max-w-[700px]">
         <p>We are a team of librarians, technologists, lawyers, designers, and more, and we work out of the Harvard Law School Library.</p>
-        <p>We believe that libraries play a fundamental role in humanity as open, privacy-respecting, and sustainable information spaces. We also believe technology holds great power to break down barriers to information creation, preservation, and use, but tools are never neutral: they must be thoughtfully developed to support human thriving.</p>
+        <p>We believe that libraries play a fundamental role in humanity as open, privacy-respecting, and sustainable information spaces. We also believe technology holds great power to break down barriers to information creation, preservation, and use.</p>
       </div>
     </div>
   </section>
-  
+
   <section>
     <figure>
       <picture>
@@ -114,11 +114,8 @@ layout: sectioned-page
   <section class="container pb-120 md:pb-220 flex flex-col gap-80 md:gap-160">
     <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
       <h2 class="h2">Supported By</h2>
-      <p class="md:col-span-2 body-text max-w-[700px] pt-20">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
     </div>
-    <div class="flex flex-wrap gap-x-[10vw] gap-y-100 items-center justify-center max-w-[1400px] mx-auto">
+    <div class="flex flex-wrap gap-x-[10vw] gap-y-100 items-center justify-center max-w-[500px] mx-auto">
       <img src="/assets/images/harvard-law-school-logo.png" alt="Harvard Law School Logo" />
       <img src="/assets/images/ffdw-logo.png" alt="Filecoin Foundation for the Decentralized Web Logo" />
       <img src="/assets/images/lexisnexis-logo.png" alt="LexisNexis Logo" />
