--- a/app/index.html
+++ b/app/index.html
@@ -33,12 +33,12 @@ sharing-card-type: summary_large_image
 </div>
 
 <div class="flex flex-col gap-50 md:gap-80 pb-120 md:pb-220">
-  {% include 
-    project-card.html 
-    background="bg-yellow" 
-    featured="true" 
-    title="Perma.cc" 
-    description="Perma.cc is a web preservation and citation tool that is changing the way lawyers, scholars, journalists, and the public preserve and cite to the web. Online content is incredibly ephemeral - it disappears anytime a website is changed or sunsetted - but we all rely on it and reference it all day, every day. Perma.cc was originally developed to ensure that legal citations of the web maintain their integrity even as the information originally cited may have since disappeared, but its utility expands far beyond the bounds of the law."
+  {% include
+    project-card.html
+    background="bg-yellow"
+    featured="true"
+    title="Perma.cc"
+    description="Perma.cc is a web preservation and citation tool that is changing the way lawyers, scholars, journalists, and the public preserve and cite to the web."
     logo="perma-logo.svg"
     linkOne="https://perma.cc/"
     linkOneLabel="Visit Website"
@@ -60,8 +60,8 @@ sharing-card-type: summary_large_image
       <h2 class="h2">Our Work</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
         <div class="flex flex-col gap-20 max-w-[650px]">
-          <p>We build and explore new technology through the lens of library principles. Perma.cc, a web preservation and citation tool; H2O, an open casebook authoring and reading platform; and The Caselaw Access Project, an open database of over 6 million court opinions free and open to the public.</p>
-          <p>We also conduct research to further our understanding of certain technologies and create guides for others working in our field.</p>
+          <p>We build and explore new technology through the lens of library principles.</p>
+          <p>Conducting research to further our understanding of certain technologies allows us to share our knowledge with those in the library field, or those in industry interested in making their tech more private, secure, or focused on the long term.</p>
         </div>
         {% include arrow-link.html label="View All Projects" href="/projects" %}
       </div>
