--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -44,14 +44,14 @@ layout: sectioned-page
             <div class="expandable__content--inner">
               <p>
                 The Library Innovation Lab is a team of librarians, programmers, artists, and lawyers with a broad mission: to
-                build open-source tools and services for open knowledge, available to everyone and in the public interest,
-                that solve emerging information problems from the perspective of the world's largest academic law library.
+                build open-source tools and services for open knowledge. From the perspective of the world's largest academic law library.
                 We currently support three long-running services (
                   <a class="interactive-link dark reverse" href="https://perma.cc">Perma</a>,
                   <a class="interactive-link dark reverse" href="https://opencasebook.org">H2O Open Casebook</a>, and the
                   <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a>
                 ) as well as a range of shorter-term experiments.
-                On the tech side, we work most often with Django, Vue, and Postgres.
+              </p>
+              <p>On the tech side, we work most often with Django, Vue, and Postgres.
               </p>
             </div>
           </div>
@@ -71,29 +71,16 @@ layout: sectioned-page
                 largest law libraries, with a mission both to try new things and to think deeply about what ought to exist
                 for the long haul. Our mission offers a range of benefits for staff:
               </p>
-              <ul>
-                <li>Job stability and support. While we maintain the creative atmosphere and flexibility of a small innovation lab, we're backed by an established institution with strong benefits and support for employees.</li>
-                <li>Room to pursue your research agenda. We are located at the Harvard Law School Library and share a kitchen with  the Berkman Klein Center and metaLAB. Going to events, having conversations, developing your scholarly perspective, and exploring it through creative projects are encouraged. We will specifically prioritize these things at the cost of shipping the next feature.</li>
-                <li>Set your own pace. We are a small, self-directed group that depends on internal motivation rather than externally imposed crunch time.</li>
-                <li>Build open source. All of our projects are open source and otherwise designed to maximize the public benefit of our work.</li>
-                <li>Work on stuff that matters. The projects we make are measured by how they help people in the long term.</li>
-              </ul>
-              <h3 class="label" id="location">Location</h3>
               <p>
-                We are based in a newly-renovated space on the Harvard Law School campus. Our full-time staff positions are
-                hybrid/in-person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
-                positions may be remote by individual arrangement.
-              </p>
-              <h3 class="label" id="ediba">Equity, diversity, inclusion, belonging and antiracism</h3>
+                <strong>Job stability and support.</strong> While we maintain the creative atmosphere and flexibility of a small innovation lab, we're backed by an established institution with strong benefits and support for employees.</p>
               <p>
-                The work and well-being of the Lab are strengthened profoundly by the
-                diversity of our community and our differences in background, culture,
-                experience, racial identity, national origin, religion, sexual orientation, and much
-                more. We actively seek and welcome applications from Black and Indigenous people and people of color;
-                women and non-binary people; the LGBTQ+ community; and people with disabilities; as well as
-                applications from researchers and practitioners from across the
-                spectrum of disciplines, methods, and life experiences.
-              </p>
+                <strong>Room to pursue your research agenda.</strong> We are located at the Harvard Law School Library and share a kitchen with  the Berkman Klein Center and metaLAB. Going to events, having conversations, developing your scholarly perspective, and exploring it through creative projects are encouraged. We will specifically prioritize these things at the cost of shipping the next feature.</p>
+              <p>
+                <strong>Set your own pace.</strong> We are a small, self-directed group that depends on internal motivation rather than externally imposed crunch time.</p>
+              <p>
+                <strong>Build open source.</strong> All of our projects are open source and otherwise designed to maximize the public benefit of our work.</p>
+              <p>
+                <strong>Work on stuff that matters.</strong> The projects we make are measured by how they help people in the long term.</p>
             </div>
           </div>
         </lil-expandable>
@@ -140,7 +127,7 @@ layout: sectioned-page
       </div>
     </div>
   </section>
-  
+
   <section class="container flex flex-col gap-24 md:gap-40">
     <h2 class="h2">Staff Positions</h2>
     <div class="md:grid md:grid-cols-12">
@@ -201,7 +188,7 @@ layout: sectioned-page
                 <strong>Research Assistants:</strong> We're seeking paid research assistants with a web
                 development background to help us build open source legal
                 tech and civic tech tools
-                like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o">Opencasebook.org</a>,
+                like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o>Opencasebook.org" class="interactive-link dark reverse">opencasebook.org</a>,
                 and <a href="/projects/caselaw-access-project" class="interactive-link dark reverse">Case.law</a>.
               </p>
               <p>
@@ -292,7 +279,7 @@ layout: sectioned-page
                   cultural impact of new technologies
                 </li>
               </ul>
-      
+
               <p>
                 <strong>Fellowship details:</strong> Fellowships are individually arranged on a rolling basis,
                 and may be any length from a week to a year. Fellows are
