More copy changes

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -23,7 +23,7 @@ layout: sectioned-page
             class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
       <figcaption class="inline-block container text-16 py-8">
-        <strong>Credit: Bob O’Connor</strong> With a focus on fostering collaboration and community, the modernist building has been transformed into a 21st-century work environment.
+        <strong>Credit: Bob O’Connor</strong>
       </figcaption>
     </figure>
   </section>
@@ -44,12 +44,11 @@ layout: sectioned-page
             <div class="expandable__content--inner">
               <p>
                 The Library Innovation Lab is a team of librarians, programmers, artists, and lawyers with a broad mission: to
-                build open-source tools and services for open knowledge. From the perspective of the world's largest academic law library.
-                We currently support three long-running services (
+                build open-source tools and services to advance open knowledge.</p>
+              <p>We currently support three long-running services (
                   <a class="interactive-link dark reverse" href="https://perma.cc">Perma</a>,
                   <a class="interactive-link dark reverse" href="https://opencasebook.org">H2O Open Casebook</a>, and the
-                  <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a>
-                ) as well as a range of shorter-term experiments.
+                  <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a> ) as well as a range of shorter-term experiments.
               </p>
               <p>On the tech side, we work most often with Django, Vue, and Postgres.
               </p>
@@ -181,8 +180,8 @@ layout: sectioned-page
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
-                Students: thinking about legal tech, civic tech, or
-                cultural memory? We have options:
+                Thinking about legal tech, civic tech, or
+                cultural memory? We have options.
               </p>
               <p>
                 <strong>Research Assistants:</strong> We're seeking paid research assistants with a web
@@ -249,37 +248,6 @@ layout: sectioned-page
                 In short, who are we, how did we get here, and where are
                 we going? And who is "we" in a networked world anyway?
               </p>
-              <p>
-                By "track record of building tools or leading
-                communities," we mean that we want to see your theory of
-                change and how it operates in the world: how have your
-                beliefs about who we are, where we came from, and where
-                we're going been translated to action, whether in code, in
-                writing, or in community organizing, and what are your
-                next steps?
-              </p>
-              <p>
-                More concretely, strong fellowship applicants could include:
-              </p>
-              <ul>
-                <li>
-                  Coders building software to help small institutions or
-                  communities run and preserve their own digital archives
-                </li>
-                <li>
-                  Librarians leading movements for internet access and
-                  digital literacy
-                </li>
-                <li>
-                  Archivists developing novel practices to empower
-                  communities not benefitting from traditional archives
-                </li>
-                <li>
-                  Artists and authors helping to explore and translate the
-                  cultural impact of new technologies
-                </li>
-              </ul>
-
               <p>
                 <strong>Fellowship details:</strong> Fellowships are individually arranged on a rolling basis,
                 and may be any length from a week to a year. Fellows are
