Hyphenate long-term

--- a/app/projects.html
+++ b/app/projects.html
@@ -66,7 +66,7 @@ layout: sectioned-page
       <h2 class="h2">Platforms</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
         <p class="flex flex-col gap-20 max-w-[700px]">
-          Tools are the heart of the Library Innovation Lab. We build things. Our platforms each have their own user base and long term goals.
+          Tools are the heart of the Library Innovation Lab. We build things. Our platforms each have their own user base and long-term goals.
         </p>
       </div>
     </div>
