Added fall Transform event, edited job description and marquee

--- a/app/events.html
+++ b/app/events.html
@@ -30,12 +30,15 @@ layout: sectioned-page
       <div class="flex flex-col items-start gap-20">
         <div class="label">Next Event</div>
         <div class="flex flex-col md:grid md:grid-cols-3 gap-32 pb-60">
-          <h1 class="h2">Transform: Justice March 8, 2024</h1>
+          <h1 class="h2">Transform: Journalism - Fall 2024</h1>
           <div class="md:col-span-2 body-text max-w-[700px] pt-10 flex flex-col items-start gap-50">
             <p>
-              A celebration of the full, unqualified release of the data from the Caselaw Access Project will be the anchor of an event focused on the future of the access to law movement. Speakers across government, academia, and industry will sketch out the opportunities ahead of us for expanding access to legal data and its waterfall effects across society and justice.
+              AI is poised to fundamentally change journalism—its practice, its economics, and its import. In a world where media is so easily generated, how can the relationship between AI and journalism be structured to reaffirm our ability to establish, value, and communicate truth?
             </p>
-            {% include arrow-link.html label="More Info" href="/events/transform-justice" reverse=true %}
+            <p>
+              To answer this question, The Library Innovation Lab is hosting Transform: Journalism, a one-day gathering of key decision-makers and stakeholders from model-makers and journalism agencies to academia and news publications. This private workshop aims to identify a set of shared values and collaborative opportunities that might guide the evolution of AI and journalism toward the sustainable cultivation of truth.
+            </p>
+            {% include arrow-link.html label="More Info" href="/events/transform-journalism" reverse=true %}
           </div>
         </div>
       </div>
