--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -172,7 +172,7 @@ layout: sectioned-page
                 <strong>Research Assistants:</strong> We're seeking paid research assistants with a web
                 development background to help us build open source legal
                 tech and civic tech tools
-                like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o>Opencasebook.org" class="interactive-link dark reverse">opencasebook.org</a>,
+                like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o>opencasebook.org" class="interactive-link dark reverse">opencasebook.org</a>,
                 and <a href="/projects/caselaw-access-project" class="interactive-link dark reverse">Case.law</a>.
               </p>
               <p>
