--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@ sharing-card-type: summary_large_image
 
 <div class="bg-black text-white w-full pt-32 pb-32 md:pt-120 md:pb-160 continer text-center flex flex-col justify-center items-center gap-20 md:gap-32">
   <h2 class="font-mono uppercase tracking-8 text-green text-16 md:text-24 font-normal">Our Mission</h2>
-  <h3 class="text-28 md:text-54 leading-120 max-w-[1120px] tracking-2">To grow knowledge and community by bringing <strong>library principles to technological frontiers.</strong></h3>
+  <h3 contenteditable class="text-28 md:text-54 leading-120 max-w-[1120px] tracking-2">To grow knowledge and community by bringing <strong>library principles to technological frontiers.</strong></h3>
 </div>
 
 <div class="bg-blue py-32">
