--- a/app/index.html
+++ b/app/index.html
@@ -41,9 +41,9 @@ sharing-card-type: summary_large_image
     description="Perma.cc is a web preservation and citation tool that is changing the way lawyers, scholars, journalists, and the public preserve and cite to the web."
     logo="perma-logo.svg"
     linkOne="https://perma.cc/"
-    linkOneLabel="Visit Website"
+    linkOneLabel='Visit <span class="sr-only">Perma.cc</span> Website'
     linkTwo="/projects/perma-cc"
-    linkTwoLabel="Learn More"
+    linkTwoLabel='Learn More <span class="sr-only">About Perma.cc</span>'
   %}
   <div class="container flex flex-col gap-50 md:gap-100">
     <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 pb-50 md:pb-120 border-b-1 border-black">
