--- a/app/projects.html
+++ b/app/projects.html
@@ -75,6 +75,12 @@ layout: sectioned-page
   <section class="flex flex-col gap-18 pb-40 md:pb-140">
     {% assign active_projects = site.projects_active | sort: "order" %}
     {% for project in active_projects %}
+      {% capture linkOneLabel %}
+        Visit <span class="sr-only">{{ project.title }}'s</span> Website
+      {% endcapture %}
+      {% capture linkTwoLabel %}
+        Learn More <span class="sr-only"> About {{ project.title }}</span>
+      {% endcapture %}
       {% include
         project-card.html
         background=project.background_class
@@ -82,9 +88,9 @@ layout: sectioned-page
         description=project.description
         logo=project.logo
         linkOne=project.project_website
-        linkOneLabel="Visit Website"
+        linkOneLabel=linkOneLabel
         linkTwo=project.url
-        linkTwoLabel="Learn More"
+        linkTwoLabel=linkTwoLabel
       %}
     {% endfor %}
   </section>
@@ -102,11 +108,14 @@ layout: sectioned-page
       </div>
       <div class="flex flex-col">
         {% for project in site.projects_retired %}
+          {% capture linkLabel %}
+            Learn More <span class="sr-only"> About {{ project.title }}</span>
+          {% endcapture %}
           <div class="body-text w-full py-32 border-t-1 border-black first-of-type:border-t-0 last-of-type:border-b-1 flex flex-col  md:grid md:grid-cols-12 gap-8 md:gap-24 relative md:items-center">
             <h3 class="label col-span-3">{{ project.title }}</h3>
             <span class="col-span-6">{{ project.what_does_it_do }}</span>
             <span class="col-span-3 flex md:justify-end pt-20 md:pt-0">
-              {% include arrow-link.html label="Learn More" href=project.url target=target card_link="true" %}
+              {% include arrow-link.html label=linkLabel href=project.url target=target card_link="true" %}
             </span>
           </div>
           <!-- <div class="flex flex-col gap-24 md:grid md:grid-cols-3 py-40 border-t-1 border-black first-of-type:border-t-0">
