Update /projects/ to /our-work/ in our repo.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -171,8 +171,8 @@ layout: sectioned-page
               <p>
                 <strong>Research Assistants:</strong> We're seeking paid research assistants with a web
                 development background to help us build open source legal
-                tech and civic tech tools like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o/opencasebook.org" class="interactive-link dark reverse">opencasebook.org</a>,
-                and <a href="/projects/caselaw-access-project" class="interactive-link dark reverse">Case.law</a>.
+                tech and civic tech tools like <a href="/our-work/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/our-work/h2o/opencasebook.org" class="interactive-link dark reverse">opencasebook.org</a>,
+                and <a href="/our-work/caselaw-access-project" class="interactive-link dark reverse">Case.law</a>.
               </p>
               <p>
                 <strong>Student Fellows:</strong> We offer student fellow positions to provide mentorship to
