Remove unused simple-page layout; merge sectioned-page into default.

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
-layout: sectioned-page
+layout: default
 title: Library Innovation Lab at Harvard University
 title-tag-complete: The Library Innovation Lab at Harvard Law School
 description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. The Library Innovation Lab is growing knowledge and community by bringing library principles to technological frontiers."
