--- a/app/our-work.html
+++ b/app/our-work.html
@@ -4,7 +4,7 @@ subtitle: We build and explore new technology through the lens of library princi
 slug: projects
 description: "Our projects attempt to make something better, simpler, more transparent, or more fun."
 custom-footer: true
-layout: sectioned-page
+layout: default
 ---
 
 <div class="w-full">
