Don't break, if there is no upcoming event.

--- a/app/events.html
+++ b/app/events.html
@@ -13,43 +13,44 @@ layout: sectioned-page
 <div class="flex flex-col gap-56 pb-150">
 
   {% assign next_event = site.events | where_exp: 'item','item.date >= site.time' | sort: 'date' | first %}
+  {% if next_event %}
+    {% if next_event.banner %}
+      <section class="container">
+        <div class="w-full relative">
+          <figure>
+            <picture>
+              {% if next_event.banner_large %}
+              <source media="(min-width: 600px)"
+                      srcset="{{ site.baseurl }}/assets/images/{{ next_event.banner_large }}">
+              {% endif %}
+              <source srcset="{{ site.baseurl }}/assets/images/{{ next_event.banner }}">
+              <img src="{{ site.baseurl }}/assets/images/{{ next_event.banner }}"
+                  alt=""
+                  class="img-full-width">
+            </picture>
+          </figure>
+        </div>
+      </section>
+      {% endif %}
 
-  {% if next_event.banner %}
-  <section class="container">
-    <div class="w-full relative">
-      <figure>
-        <picture>
-          {% if next_event.banner_large %}
-          <source media="(min-width: 600px)"
-                  srcset="{{ site.baseurl }}/assets/images/{{ next_event.banner_large }}">
-          {% endif %}
-          <source srcset="{{ site.baseurl }}/assets/images/{{ next_event.banner }}">
-          <img src="{{ site.baseurl }}/assets/images/{{ next_event.banner }}"
-              alt=""
-              class="img-full-width">
-        </picture>
-      </figure>
-    </div>
-  </section>
-  {% endif %}
-
-  <section class="container">
-    <div class="flex flex-col gap-50 md:gap-120">
-      <div class="flex flex-col items-start gap-20">
-        <div class="label">Next Event</div>
-        <div class="flex flex-col md:grid md:grid-cols-3 gap-32 pb-60">
-          <h1 class="h2">{{ next_event.title }} - {{ next_event.date_informal }}</h1>
-          <div class="md:col-span-2 body-text max-w-[700px] pt-10 flex flex-col items-start gap-50">
-            {{ next_event.excerpt }}
-            {% capture linkLabel %}
-              <span class="sr-only">{{ next_event.title }},</span> More Info
-            {% endcapture %}
-            {% include arrow-link.html label=linkLabel href=next_event.url reverse=true %}
+      <section class="container">
+        <div class="flex flex-col gap-50 md:gap-120">
+          <div class="flex flex-col items-start gap-20">
+            <div class="label">Next Event</div>
+            <div class="flex flex-col md:grid md:grid-cols-3 gap-32 pb-60">
+              <h1 class="h2">{{ next_event.title }} - {{ next_event.date_informal }}</h1>
+              <div class="md:col-span-2 body-text max-w-[700px] pt-10 flex flex-col items-start gap-50">
+                {{ next_event.excerpt }}
+                {% capture linkLabel %}
+                  <span class="sr-only">{{ next_event.title }},</span> More Info
+                {% endcapture %}
+                {% include arrow-link.html label=linkLabel href=next_event.url reverse=true %}
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
+  {% endif %}
 
   {% if site.events.size > 0 %}
     <section class="container flex flex-col items-start gap-40">
