Add approximate dates for retired projects.

--- a/app/_our_work/summer-fellows-2016.html
+++ b/app/_our_work/summer-fellows-2016.html
@@ -1,10 +1,13 @@
 ---
 category: programs
 retired: true
-retired_date:
+retired_date: 2016-08-31
 
 title: Summer 2016 Fellows Program
 slug: fellows-2016
+
+what_does_it_do: >
+  Twelve weeks at Harvard Law School's Library
 ---
 
 <p>The Fellows Program brought together 7 independent thinkers to pursue their research over the course of 12 weeks at Harvard Law School's Library, Langdell Hall. Their results range from book chapters to web applications to board games &mdash; and, ultimately, an immeasurable amount of inspiration that extends far beyond the walls of Langdell.</p>
